--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    
+    <header></header>
+
+    <section></section>
+
+    <section></section>
+
+    <section></section>
+
+    <footer></footer>
   </body>
 </html>
