Add img folder and put image,logo, design specs inside it

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      
+    </header>
 
     <section></section>
 
