--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
   </head>
   <body>
     <header>
-      
+      <div class="container row">
+        <button class="nav-toggle" aria-label="open navigation">
+          <span class="hamburger"></span>
+        </button>
+      </div>
     </header>
 
     <section></section>
