Add logo to header in index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <button class="nav-toggle" aria-label="open navigation">
           <span class="hamburger"></span>
         </button>
+
+        <a class="logo" href="#" target="_blank" rel="noopener noreferrer"
+          ><img src="./img/logo.svg" alt="" />conquering responsive layouts</a
+        >
       </div>
     </header>
 
