Add navbar to header in index.html

--- a/index.html
+++ b/index.html
@@ -18,8 +18,61 @@
         </button>
 
         <a class="logo" href="#" target="_blank" rel="noopener noreferrer"
-          ><img src="./img/logo.svg" alt="" />conquering responsive layouts</a
-        >
+          ><img src="./img/logo.svg" alt="conquering responsive layouts"
+        /></a>
+
+        <nav class="nav">
+          <ul class="nav__list nav__list--primary">
+            <li class="nav__item">
+              <a
+                href="#"
+                class="nav__link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Home</a
+              >
+            </li>
+            <li class="nav__item">
+              <a
+                href="#"
+                class="nav__link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >About</a
+              >
+            </li>
+            <li class="nav__item">
+              <a
+                href="#"
+                class="nav__link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Contact</a
+              >
+            </li>
+          </ul>
+
+          <ul class="nav__list nav__list--secondary">
+            <li class="nav__item">
+              <a
+                href="#"
+                class="nav__link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Sign in</a
+              >
+            </li>
+            <li class="nav__item">
+              <a
+                href="#"
+                class="nav__link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Sign up</a
+              >
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
 
