Add class to sign up button in index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li class="nav__item">
               <a
                 href="#"
-                class="nav__link"
+                class="nav__link nav__link--button"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Sign up</a
