Add html code for hero section in index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,22 @@
       </div>
     </header>
 
-    <section></section>
+    <section>
+      <div class="container row">
+        <div class="hero__title">
+          <h1>Responsive layouts <span class="hero__title--color">don’t have to be a struggle</span></h1>
+        </div>
+        <div class="hero__text">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a href="#" class="btn" target="_blank" rel="noopener noreferrer"
+            >I want to learn</a
+          >
+        </div>
+      </div>
+    </section>
 
     <section></section>
 
