Add class to hero section in index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
     </header>
 
-    <section>
+    <section class="hero">
       <div class="container row">
         <div class="hero__title">
           <h1>Responsive layouts <span class="hero__title--color">don’t have to be a struggle</span></h1>
