Add html code for whitesmoke row section in index.html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
     <section class="hero">
       <div class="container row">
         <div class="hero__title">
-          <h1>Responsive layouts <span class="hero__title--color">don’t have to be a struggle</span></h1>
+          <h1>
+            Responsive layouts
+            <span class="hero__title--color">don’t have to be a struggle</span>
+          </h1>
         </div>
         <div class="hero__text">
           <p>
@@ -93,7 +96,34 @@
       </div>
     </section>
 
-    <section></section>
+    <section class="whitesmoke-row">
+      <div class="container row">
+        <div class="col">
+          <h3>Mobile-first</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam.
+          </p>
+        </div>
+        <div class="col">
+          <h3>Efficient</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam.
+          </p>
+        </div>
+        <div class="col">
+          <h3>Done right</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam.
+          </p>
+        </div>
+      </div>
+    </section>
 
     <section></section>
 
