--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
           </p>
         </div>
         <div class="right-column">
-          <h3>Work your way up</h3>
+          <h3 class="middle-row-title">Work your way up</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
         </div>
         <div class="right-column">
-          <h3></h3>
+          <h3>Break it down</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
