Remove right-column h3 element's class name in index.html

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           </p>
         </div>
         <div class="right-column">
-          <h3 class="middle-row-title">Work your way up</h3>
+          <h3>Work your way up</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
