Add html code for footer section in index.html

--- a/index.html
+++ b/index.html
@@ -174,7 +174,50 @@
       </aside>
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+      <div class="container row">
+        <h4 class="footer__first-title">just scratching the surface</h4>
+        <div class="footer__text">
+          <div class="company-info">
+            <h5 class="footer__second-title">About our company</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </p>
+          </div>
+
+          <div class="page-link-container">
+            <div>
+              <h5 class="footer__second-title">Getting around</h5>
+              <ul class="page__list">
+                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">Home</a></li>
+                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">About</a></li>
+                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">Contact</a></li>
+              </ul>
+            </div>
+            <div>
+              <h5 class="footer__second-title">Other things</h5>
+              <ul class="page__list">
+                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">Lorem ipsum</a></li>
+                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">dolor</a></li>
+                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">sit amet</a></li>
+                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">consectetur</a></li>
+              </ul>
+            </div>
+            <div>
+              <h5 class="footer__second-title">And more</h5>
+              <ul class="page__list">
+                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">Lorem ipsum</a></li>
+                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">dolor</a></li>
+                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">sit amet</a></li>
+                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">consectetur</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="./main.js"></script>
   </body>
 </html>
