Add class to each footer link wrapper in index.html

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </div>
 
           <div class="page-link-container">
-            <div>
+            <div class="footer-link-column">
               <h5 class="footer__second-title">Getting around</h5>
               <ul class="page__list">
                 <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">Home</a></li>
@@ -196,7 +196,7 @@
                 <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">Contact</a></li>
               </ul>
             </div>
-            <div>
+            <div class="footer-link-column">
               <h5 class="footer__second-title">Other things</h5>
               <ul class="page__list">
                 <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">Lorem ipsum</a></li>
@@ -205,7 +205,7 @@
                 <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">consectetur</a></li>
               </ul>
             </div>
-            <div>
+            <div class="footer-link-column">
               <h5 class="footer__second-title">And more</h5>
               <ul class="page__list">
                 <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">Lorem ipsum</a></li>
