Add another class to footer container in index.html

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container row">
+      <div class="container row footer-wrapper">
         <h4 class="footer__first-title">just scratching the surface</h4>
         <div class="footer__text">
           <div class="company-info">
