Remove unnecessary class and format doc in index.html

--- a/index.html
+++ b/index.html
@@ -188,30 +188,118 @@
           </div>
 
           <div class="page-link-container">
-            <div class="footer-link-column">
+            <div class="page-link-column first-two-link">
               <h5 class="footer__second-title">Getting around</h5>
               <ul class="page__list">
-                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">Home</a></li>
-                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">About</a></li>
-                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">Contact</a></li>
+                <li class="page__link">
+                  <a
+                    class="page__item"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Home</a
+                  >
+                </li>
+                <li class="page__link">
+                  <a
+                    class="page__item"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >About</a
+                  >
+                </li>
+                <li class="page__link">
+                  <a
+                    class="page__item"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Contact</a
+                  >
+                </li>
               </ul>
             </div>
-            <div class="footer-link-column">
+            <div class="page-link-column first-two-link">
               <h5 class="footer__second-title">Other things</h5>
               <ul class="page__list">
-                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">Lorem ipsum</a></li>
-                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">dolor</a></li>
-                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">sit amet</a></li>
-                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">consectetur</a></li>
+                <li class="page__link">
+                  <a
+                    class="page__item"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Lorem ipsum</a
+                  >
+                </li>
+                <li class="page__link">
+                  <a
+                    class="page__item"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >dolor</a
+                  >
+                </li>
+                <li class="page__link">
+                  <a
+                    class="page__item"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >sit amet</a
+                  >
+                </li>
+                <li class="page__link">
+                  <a
+                    class="page__item"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >consectetur</a
+                  >
+                </li>
               </ul>
             </div>
-            <div class="footer-link-column">
+            <div class="page-link-column">
               <h5 class="footer__second-title">And more</h5>
               <ul class="page__list">
-                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">Lorem ipsum</a></li>
-                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">dolor</a></li>
-                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">sit amet</a></li>
-                <li class="page__link"><a class="page__item" href="#" target="_blank" rel="noopener noreferrer">consectetur</a></li>
+                <li class="page__link">
+                  <a
+                    class="page__item"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Lorem ipsum</a
+                  >
+                </li>
+                <li class="page__link">
+                  <a
+                    class="page__item"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >dolor</a
+                  >
+                </li>
+                <li class="page__link">
+                  <a
+                    class="page__item"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >sit amet</a
+                  >
+                </li>
+                <li class="page__link">
+                  <a
+                    class="page__item"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >consectetur</a
+                  >
+                </li>
               </ul>
             </div>
           </div>
