Add class at whitesmoke-row for using gap to widescreen version in index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </section>
 
     <section class="whitesmoke-row">
-      <div class="container row">
+      <div class="container row whitesmoke-row--wrapper">
         <div class="col">
           <h3>Mobile-first</h3>
           <p>
